# maf_ds_agent

./: .env.example  .gitignore  Dockerfile.bug_log  Dockerfile.ds_tools  Dockerfile.tracking  Instructions.md  README.md  copilot.md  docker-compose.yml  main.py  pyproject.toml  run.md
.github/workflows/: ci.yml
agents/: artefact_tracking_observer.py  base.py  bug_log_observer.py  cleaning_agent.py  clients.py  debug_agent.py  deployment_agent.py  eda_agent.py  evaluation_agent.py  explainability_agent.py  feature_agent.py  ingestion_agent.py  middleware.py  orchestrator.py  report_agent.py  training_agent.py  tuning_agent.py
config/: library_registry.py  settings.py
data/artefacts/titanic-003/eda/: eda_summary.json
data/artefacts/titanic-005/cleaned/: transformation_log.json
data/artefacts/titanic-005/report/: report.html  report.md
data/artefacts/wine-001/cleaned/: dataset_cleaned.csv  transformation_log.json
data/artefacts/wine-001/features/: feature_manifest.json  test.csv  train.csv
mcp_servers/: __init__.py
mcp_servers/bug_log/: __init__.py  server.py
mcp_servers/ds_tools/: __init__.py  server.py
mcp_servers/tracking/: __init__.py  server.py
memory/: __init__.py  agent_memory.py
scripts/: __init__.py  run_e2e_test.py  start_servers.py
tests/: test_imports.py  test_integration.py  test_ralph_loop_mcp.py
tools/: file_type_detector.py  local_tools.py
tools/readers/: __init__.py  dispatcher.py  document.py  image.py  model.py  tabular.py
workflows/: __init__.py  criteria.py  pipeline_graph.py  ralph_loop.py
