[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "maf-ds-agent"
version = "1.0.0"
description = "Autonomous Data Science Agent built on Microsoft Agent Framework 1.0"
requires-python = ">=3.12"
dependencies = [
    "agent-framework-openai==1.0.0",
    "mcp==1.26.0",
    "browser-use==0.1.47",
    "duckduckgo-search==8.0.1",
    "magika==0.6.1",
    "filetype==1.2.0",
    "chardet==5.2.0",
    "pandas==2.2.3",
    "pyarrow==17.0.0",
    "openpyxl==3.1.5",
    "xlrd==2.0.1",
    "pymupdf==1.24.14",
    "python-docx==1.1.2",
    "pillow==11.1.0",
    "scikit-learn==1.6.1",
    "xgboost==2.1.3",
    "lightgbm==4.5.0",
    "catboost==1.2.7",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "transformers==4.47.1",
    "datasets==3.2.0",
    "sentence-transformers==3.3.1",
    "shap==0.46.0",
    "lime==0.2.0.1",
    "captum==0.7.0",
    "fairlearn==0.11.0",
    "optuna==4.1.0",
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "opentelemetry-sdk==1.29.0",
    "opentelemetry-exporter-otlp==1.29.0",
    "azure-identity==1.19.0",
    "python-dotenv==1.0.1",
    "pydantic-settings==2.7.0",
    "numpy==2.2.1",
    "scipy==1.15.1",
    "statsmodels==0.14.4",
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
    "plotly==5.24.1",
    "kaleido==0.2.1",
    "onnx==1.17.0",
    "onnxruntime==1.20.1",
    "safetensors==0.4.5",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.9.0",
    "mypy==1.13.0",
    "mutagen==1.47.0",
    "langchain-openai==0.3.0",
    "httpx==0.28.1",
    "aiohttp==3.11.11",
    "aiofiles==24.1.0",
    "tenacity==9.0.0",
    "pydantic==2.10.4",
    "starlette==0.41.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
